@@ -9,6 +9,7 @@ FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
 FIX Used of an extern URL as a static page #403 (bazooka07)
 FIX Comment editor is empty #418 (P3ter)
 FIX Comments list sorting #419 (P3ter)
+FIX Default theme : double underline on footer menu (P3ter)  
 
 ## PLUXML 5.8.2 (2020/02/09) ##
 [+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
